<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="txt_upcoming_elections">Upcoming Elections</string>
    <string name="txt_navigate_to_representatives">Navigate to representatives</string>
    <string name="txt_saved_elections">Saved Elections</string>
    <string name="txt_follow_election">Follow Election</string>
    <string name="txt_argument_invalid">Required argument is null, please try again!</string>
    <string name="txt_election_information">Election Information</string>
    <string name="txt_voting_locations">Voting Locations</string>
    <string name="txt_ballot_information">Ballot Information</string>
    <string name="txt_unfollow_elections">Unfollow Election</string>
    <string name="tx_find_my_representatives">Find my representatives</string>
    <string name="tx_use_my_location">Use my Location</string>
    <string name="txt_my_representatives">My Representatives</string>
    <string name="txt_address_line_1">Address Line 1</string>
    <string name="txt_address_line_2">Address Line 2</string>
    <string name="txt_city">City</string>
    <string name="txt_zip">Zip</string>
    <string name="location_required_error">Location is required for use this feature</string>
    <string name="permission_denied_explanation">Please Enabled this permission!</string>
    <string name="settings">Settings</string>
    <string name="txt_representative_search">Representative Search</string>

    <!-- TODO: Add necessary string values -->

</resources>
